--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,22 @@ import MenuItem from '../components/MenuItem.astro';
 <!doctype html>
 <html lang="es">
   <head>
+    <!-- Clarity -->
+    <script type="text/javascript">
+      (function (c, l, a, r, i, t, y) {
+        c[a] =
+          c[a] ||
+          function () {
+            (c[a].q = c[a].q || []).push(arguments);
+          };
+        t = l.createElement(r);
+        t.async = 1;
+        t.src = 'https://www.clarity.ms/tag/' + i;
+        y = l.getElementsByTagName(r)[0];
+        y.parentNode.insertBefore(t, y);
+      })(window, document, 'clarity', 'script', 'mk7to4j71u');
+    </script>
+    <!-- Clarity -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bocatas Manolo</title>
