Feat: add metricswave script

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,6 +22,12 @@ import MenuItem from '../components/MenuItem.astro';
       })(window, document, 'clarity', 'script', 'mk7to4j71u');
     </script>
     <!-- Clarity -->
+    <!-- MetricsWave -->
+    <script
+      defer
+      event-uuid="2645bcbf-7183-48cb-8018-ca0ffeee81c9"
+      src="https://tracker.metricswave.com/js/visits.js"></script>
+    <!-- MetricsWave -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bocatas Manolo</title>
