--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,11 @@
 ---
 // src/pages/index.astro
-import MenuItem from '../components/MenuItem.astro';
+import Bocatas from '../components/Bocatas.astro';
+import Salsas from '../components/Salsas.astro';
+import { triggerEvent } from '../api/metricswave';
+import { MetricsWaveEvents } from '../api/metricswave/metricswave-events';
+
+// await triggerEvent(MetricsWaveEvents.CUSTOM_EVENT_TEST)
 ---
 
 <!doctype html>
@@ -93,20 +98,12 @@ import MenuItem from '../components/MenuItem.astro';
     <header>
       <h1 class="main-title">Bocatas Manolo</h1>
       <img src="/bocatas-manolo.jpeg" alt="Bocatas Manolo" class="header-img" />
-      <h2>Tradición y Sabor en el Corazón de Los Remedios</h2>
+      <h2>
+        En Sevilla, la Giralda , la Torre del Oro y... Los bocatas de Manolo.
+      </h2>
     </header>
 
     <section class="section">
-      <h2>Bocatas Manolo: Tradición y Sabor en el Corazón de Los Remedios</h2>
-      <p>
-        En Bocatas Manolo, te ofrecemos una experiencia única en el barrio de
-        Los Remedios, Sevilla. Con años de tradición, nuestro local es conocido
-        por la calidad y el sabor inigualable de nuestros bocadillos. Manolo, el
-        dueño, corta y prepara cada bocata personalmente, asegurándose de que
-        cada uno salga caliente y delicioso del horno. Ven y disfruta de
-        nuestros precios justos y la atención cercana que nos caracteriza. ¡Te
-        esperamos para compartir un momento de auténtico sabor sevillano!
-      </p>
       <button class="cta-button">¡Ven a Visitarnos!</button>
     </section>
 
@@ -125,33 +122,8 @@ import MenuItem from '../components/MenuItem.astro';
 
     <section class="section">
       <h2>Nuestra Carta</h2>
-      <div class="menu">
-        <MenuItem
-          name="Bocata Clásico"
-          ingredients="Jamón, Queso, Tomate"
-          price="4.50"
-        />
-        <MenuItem
-          name="Bocata Especial"
-          ingredients="Pollo, Lechuga, Mayonesa"
-          price="5.00"
-        />
-        <MenuItem
-          name="Bocata Manolo"
-          ingredients="Lomo, Pimientos, Alioli"
-          price="5.50"
-        />
-        <MenuItem
-          name="Bocata Vegetal"
-          ingredients="Aguacate, Hummus, Espinacas"
-          price="4.75"
-        />
-        <MenuItem
-          name="Bocata del Día"
-          ingredients="Ingredientes Sorpresa"
-          price="5.25"
-        />
-      </div>
+      <Bocatas />
+      <Salsas />
     </section>
 
     <footer class="footer">
